[project]
name = "langgraph-azure-sql-db-checkpoint"
version = "0.1.0"
description = "Azure SQL Database checkpoint saver for LangGraph applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.3",
    "sqlalchemy>=2.0.44",
    "pyodbc>=5.3.0",
]
authors = [
    {name = "Kailash S Prem", email = "premkailash060@gmail.com"},
]
license = {text = "MIT"}
keywords = ["langgraph", "azure", "sql", "checkpoint", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
async = ["aioodbc>=0.5.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/kailashsp/langgraph-azure-sql-db-checkpoint"
Repository = "https://github.com/kailashsp/langgraph-azure-sql-db-checkpoint"
Documentation = "https://github.com/kailashsp/langgraph-azure-sql-db-checkpoint#readme"
Issues = "https://github.com/kailashsp/langgraph-azure-sql-db-checkpoint/issues"
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"